fix left column width and wrapping

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -123,6 +123,7 @@
 
 .author__bio {
   margin: 0;
+  word-break: break-word;
 
   @include breakpoint($large) {
     margin-top: 10px;
